AC_INIT([wmget], [0.6.0], [wmaker-dev@lists.windowmaker.org])
AM_INIT_AUTOMAKE([foreign subdir-objects])
AC_CONFIG_SRCDIR([configure.ac])
AC_PROG_CC
PKG_CHECK_MODULES([x11],[x11])
PKG_CHECK_MODULES([xext],[xext])
PKG_CHECK_MODULES([xpm],[xpm])
PKG_CHECK_MODULES([libcurl],[libcurl])
AC_CONFIG_FILES([Makefile wmget.1])
AC_OUTPUT
